--- a/changelogs/0.3.0.md
+++ b/changelogs/0.3.0.md
@@ -1,3 +1,5 @@
 * More cleanups in the storage system
 * A new option `--force-update` to force the update of internal databases
 * Simultaneous database downloads
+* Show results for both movies and series when querying by title
+* Separate sub-commands for querying movies dirs and series dirs
