--- a/changelogs/0.3.0.md
+++ b/changelogs/0.3.0.md
@@ -3,3 +3,4 @@
 * Simultaneous database downloads
 * Show results for both movies and series when querying by title
 * Separate sub-commands for querying movies dirs and series dirs
+* Partial keyword-based searching
