--- a/changelogs/0.3.0.md
+++ b/changelogs/0.3.0.md
@@ -4,3 +4,5 @@
 * Show results for both movies and series when querying by title
 * Separate sub-commands for querying movies dirs and series dirs
 * Partial keyword-based searching
+* Print useful information to `stderr` even if logging is disabled
+* Support replacement of special characters, e.g. é -> e
