--- a/changelogs/0.3.0.md
+++ b/changelogs/0.3.0.md
@@ -1,11 +1,12 @@
 * More cleanups in the storage system
+* Simpler and cleaner internals
 * A new option `--force-update` to force the update of internal databases
 * Simultaneous database downloads
-* Show results for both movies and series when querying by title
-* Separate sub-commands for querying movies dirs and series dirs
-* Partial keyword-based searching
+* Show results for both movies and series
+* Separate sub-commands for querying movies and series directories
+* Rudimentary partial word/keyword-based searching
+* Support special characters, e.g. é when searching with e
 * Print useful information to `stderr` even if logging is disabled
-* Support replacement of special characters, e.g. é -> e
 * Support for `tvrank.json` files:
 
 The `tvrank.json` file can be put under the toplevel directory of a title and can contain
@@ -22,4 +23,4 @@ The format of the `tvrank.json` file is as follows:
 }
 ```
 
-where "ttXXXXXXXX" is the IMDB title id.
+where "ttXXXXXXXX" is the IMDB title id shown under the `IMDB ID` column.
