--- a/changelogs/0.7.5.md
+++ b/changelogs/0.7.5.md
@@ -4,3 +4,6 @@
 * The `NO_COLOR` environment variable can now be set to 0 for disabling
   it, or any other value for enabling it.
   * Example: `NO_COLOR=0 tvrank ...`
+  * By @fredmorcos
+* @fredmorcos fixed the buggy display of the total number of results vs. the number of
+  displayed results when the `--top` command-line argument was being used.
