--- a/changelogs/0.7.5.md
+++ b/changelogs/0.7.5.md
@@ -1,3 +1,12 @@
+* Henning Holm (@HenningHolmDE) fixed the Gitpod.io setup. [You can now develop `TVrank`
+  in Gitpod](https://gitpod.io/#https://github.com/fredmorcos/tvrank/).
+* Command-line option parsing has been reworked, search-related options can still come
+  before and after a sub-command, but global options can only come before a sub-command.
+  * Koushik Meenakshisundaram (@koushik-ms)
+  * dpolivaev (@dpolivaev)
+  * Fred Morcos (@fredmorcos)
+  * Henning Holm (@HenningHolmDE)
+  * Olsi Bakullari (@Olsi-B)
 * Tim Heaney (@oylenshpeegul) ported `TVrank` from `structopt` to `clap`. `structopt` is
   in maintenance mode and almost all of its features were moved to `clap` version 3.
 * @caglarkaya added some tests to the internal `TVrank` library.
@@ -5,5 +14,25 @@
   it, or any other value for enabling it.
   * Example: `NO_COLOR=0 tvrank ...`
   * By @fredmorcos
+* `TVrank` will now exit with code `1` when an error occurs.
+  * By @fredmorcos
+* @fredmorcos added more command-line help text.
 * @fredmorcos fixed the buggy display of the total number of results vs. the number of
   displayed results when the `--top` command-line argument was being used.
+* The `TVrank` library is now slightly easier to use when querying using keywords: the
+  lifetime of the keywords slice is no longer attached to the lifetime of the returned
+  iterator over the results.
+  * By @fredmorcos
+* An issue was fixed when the search query contained the sub-string "the" as part of a
+  larger word.
+  * By @fredmorcos
+* A new sub-command called `mark` was added and documented in the `README` to make marking
+  directories with a `tvrank.json` file easier.
+  * Koushik Meenakshisundaram (@koushik-ms)
+  * dpolivaev (@dpolivaev)
+  * Fred Morcos (@fredmorcos)
+  * Henning Holm (@HenningHolmDE)
+  * Olsi Bakullari (@Olsi-B)
+  * Vaishali (@VAISHALI-DHANOA)
+  * Patrick Scheibert (@CareForCode)
+* @fredmorcos improved the `README` documentation.
